# Final-Project

./: music_analyzer_node.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ros_tcp_endpoint/share/ros_tcp_endpoint/: package.sh
ros2_ws/install/shutter_bringup/: ._UnitySim
ros2_ws/install/shutter_bringup/UnitySim/: version.txt
ros2_ws/install/shutter_bringup/UnitySim/Shutter_MoveIt_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  globalgamemanagers  globalgamemanagers.assets  globalgamemanagers.assets.resS  level0  resources.assets  sharedassets0.assets  sharedassets0.assets.resS
ros2_ws/install/shutter_bringup/lib/shutter_bringup/: motor_startup_publisher.py  unity_simulation_manager.py
ros2_ws/install/shutter_bringup/share/ament_index/resource_index/parent_prefix_path/: shutter_bringup
ros2_ws/install/shutter_bringup/share/shutter_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/shutter_bringup/share/shutter_bringup/config/: infer_webcam_id.py  logitech_c920.yaml  shutter.v.0.2.yaml
ros2_ws/install/shutter_bringup/share/shutter_bringup/launch/: demo.launch.py  shutter_sim.launch.py  shutter_unity.launch.py  shutter_with_face.launch.py
ros2_ws/install/shutter_description/lib/shutter_description/: urdf_from_xacro.sh
ros2_ws/install/shutter_description/share/shutter_description/: local_setup.sh  package.bash  package.sh  package.xml  package.zsh
ros2_ws/install/shutter_description/share/shutter_description/cmake/: shutter_descriptionConfig.cmake
ros2_ws/install/shutter_description/share/shutter_description/robots/: shutter.v.0.1.openrave.xml  shutter.v.0.2.xacro  shutter.v.2.0.xacro  shutter.v.3.0.xacro  shutter.v.4.1.xacro
ros2_ws/install/shutter_description/share/shutter_description/robots/generated_urdf/: shutter.v.3.0.urdf
ros2_ws/install/shutter_description/share/shutter_description/urdf/core/: shutter_head.v.1.xacro
ros2_ws/install/shutter_face_ros/lib/shutter_face_ros/: simple_face.py
ros2_ws/install/shutter_face_ros/share/shutter_face_ros/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/shutter_face_ros/share/shutter_face_ros/cmake/: ament_cmake_export_include_directories-extras.cmake  export_shutter_face_ros__rosidl_generator_cExport-release.cmake  export_shutter_face_ros__rosidl_generator_pyExport-release.cmake  export_shutter_face_ros__rosidl_generator_pyExport.cmake  export_shutter_face_ros__rosidl_typesupport_fastrtps_cExport-release.cmake  export_shutter_face_ros__rosidl_typesupport_fastrtps_cExport.cmake  export_shutter_face_ros__rosidl_typesupport_fastrtps_cppExport-release.cmake  export_shutter_face_ros__rosidl_typesupport_fastrtps_cppExport.cmake  shutter_face_rosConfig.cmake  shutter_face_ros__rosidl_typesupport_cExport-release.cmake  shutter_face_ros__rosidl_typesupport_cExport.cmake  shutter_face_ros__rosidl_typesupport_introspection_cExport.cmake
ros2_ws/install/shutter_face_ros/share/shutter_face_ros/msg/: PupilsLocation.json  PupilsLocation.msg
ros2_ws/install/shutter_hardware_interface/lib/shutter_hardware_interface/: shutter_position_node
ros2_ws/install/shutter_hardware_interface/share/shutter_hardware_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/music_analyzer/: package.xml  setup.cfg  setup.py
ros2_ws/src/music_analyzer/launch/: music_dance.launch.py
ros2_ws/src/music_analyzer/music_analyzer/: music_analyzer_node.py
ros2_ws/src/shutter-ros2/: .gitignore  .gitmodules  .readthedocs.yml  AZURE_KINECT_ROS2.md  INSTALL.md  README.md  images  noetic_moveit.repos
ros2_ws/src/shutter-ros2/documentation/: Makefile  make.bat  requirements.txt
ros2_ws/src/shutter-ros2/documentation/source/: conf.py  index.rst
ros2_ws/src/shutter-ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/shutter-ros2/log/: latest_build
ros2_ws/src/shutter-ros2/shutter_bringup/: ACKNOWLEDGEMENTS.md  CMakeLists.txt  README.md  package.xml
ros2_ws/src/shutter-ros2/shutter_bringup/config/: rviz_target.cfg.rviz  shutter.v.0.1.yaml  shutter.v.2.0.yaml
ros2_ws/src/shutter-ros2/shutter_bringup/launch/: motor_startup_publisher.py  shutter.launch.py  shutter_webcam.launch.py
ros2_ws/src/shutter-ros2/shutter_description/: ACKNOWLEDGEMENTS.md  CMakeLists.txt  README.md
ros2_ws/src/shutter-ros2/shutter_description/launch/: load_description.launch.py  shutter_rviz.launch.py
ros2_ws/src/shutter-ros2/shutter_description/meshes/: wrist_link_no_motor.stl
ros2_ws/src/shutter-ros2/shutter_description/robots/: shutter.v.0.1.dae  shutter.v.0.1.urdf  shutter.v.unity.xacro
ros2_ws/src/shutter-ros2/shutter_description/scripts/: generate_ikfast_cpp.py
ros2_ws/src/shutter-ros2/shutter_description/urdf/: shutter.v.1.xacro  shutter.v.2.xacro
ros2_ws/src/shutter-ros2/shutter_description/urdf/core/: shutter_head.v.2.xacro
ros2_ws/src/shutter-ros2/shutter_description/urdf/zed_urdf/: zed.urdf
ros2_ws/src/shutter-ros2/shutter_face_ros/: CMakeLists.txt  README.md  requirements.txt  setup.py
ros2_ws/src/shutter-ros2/shutter_face_ros/launch/: simple_face.launch.py
ros2_ws/src/shutter-ros2/shutter_face_ros/shutter_face/: .gitignore  LICENSE  Pipfile  README.md  build_dist.sh  setup.py
ros2_ws/src/shutter-ros2/shutter_face_ros/shutter_face/demos/: interactive_face.py
ros2_ws/src/shutter-ros2/shutter_face_ros/shutter_face/shutter_face/: __init__.py  face_params.py
ros2_ws/src/shutter-ros2/shutter_hardware_interface/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/shutter-ros2/shutter_hardware_interface/config/: dynamixel_joints_position.yaml  position_controllers.yaml
ros2_ws/src/shutter-ros2/shutter_hardware_interface/include/shutter_hardware_interface/: dynamixel_ros_control.h  shutter_position_interface.h
ros2_ws/src/shutter-ros2/shutter_hardware_interface/src/: dynamixel_ros_control.cpp  shutter_position_interface.cpp  shutter_position_node.cpp
(+36 files in other folders)
