<?xml version="1.0"?>
<package format="3">
  <name>shutter_bringup</name>
  <version>0.1.0</version>
  <description>Scripts to run the Shutter robot</description>
  <maintainer email="marynel.vazquez@yale.edu">Marynel Vazquez</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>shutter_description</depend>
  <depend>shutter_face_ros</depend>
  <depend>rosbridge_suite</depend>
  <depend>usb_cam</depend>
  <depend>ros_tcp_endpoint</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
